feat: add tablet layout for main page

--- a/online-zoo/online-zoo/index.html
+++ b/online-zoo/online-zoo/index.html
@@ -21,6 +21,7 @@
                 </ul>
             </nav>
             <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a>
+            <div class="burger-menu"></div>
         </header>
         <main class="main">
             <section class="online">
@@ -44,7 +45,8 @@
                             than 1,500 mammals and reptiles.</p>
                         </div>
                     </div>
-                    <img src="assets/backstage-flower.png" alt="">
+                    <img src="assets/backstage-flower.png" alt="" class="backstage-flower-desktop">
+                    <img src="assets/backstage-flower-tablet.jpg" alt="" class="backstage-flower-tablet">
                 </section>
                 <section class="pets">
                     <div class="cards-container">
@@ -116,9 +118,11 @@
                     <button class="button cards__button">CHOOSE YOUR FAVOURITE</button>
                     <div class="pets__aside">
                         <img src="assets/palm_foto.png" alt="" class="palm">
-                        <img src="assets/palm_foto_small.jpg" alt="" class="palm-sm-desktop">           
+                        <img src="assets/palm_foto_small.jpg" alt="" class="palm-sm-desktop">  
+                        <img src="assets/palm_foto_tablet.jpg" alt="" class="palm-tablet">         
                         <img src="assets/strelitzia.png" alt="" class="strelitzia">
                         <img src="assets/strelitzia_small.jpg" alt="" class="strelitzia-sm-desktop">
+                        <img src="assets/strelitzia_tablet.jpg" alt="" class="strelitzia-tablet">
                     </div>
                 </section>
                 <section class="feed">
@@ -133,12 +137,14 @@
                                 <div class="img-wrapper"><img src="assets/pay.svg" alt=""></div>
                                 <p>Pay with card</p>
                             </div>
-                            <img src="assets/Vector-right.svg" alt="">
+                            <img src="assets/Vector-right.svg" alt="" class="desktop-arrows">
+                            <img src="assets/arrow.svg" alt="" class="tablet-arrows tablet-arrows-first">
                             <div class="feed-card">
                                 <div class="img-wrapper"><img src="assets/zoo.svg" alt=""></div>
                                 <p>Payment goes to the zoo</p>
                             </div>
-                            <img src="assets/Vector-right.svg" alt="">
+                            <img src="assets/Vector-right.svg" alt="" class="desktop-arrows">
+                            <img src="assets/arrow.svg" alt="" class="tablet-arrows tablet-arrows-second">
                             <div class="feed-card">
                                 <div class="img-wrapper"><img src="assets/monkey.svg" alt=""></div>
                                 <p>Your favourite animal gets delicious dish</p>
@@ -223,6 +229,7 @@
                     <button class="button testimonials__button">LEAVE FEEDBACK</button> 
                     <img src="assets/leav_foto.png" alt="" class="leaf">
                     <img src="assets/leav_foto_sm_desktop.jpg" alt="" class="leaf-sm-desktop">
+                    <img src="assets/leav_foto_tablet.jpg" alt="" class="leaf-tablet">
                 </section>
             </main>
             <footer class="footer">
