feat: add tablet layout for donate page

--- a/online-zoo/donate.html
+++ b/online-zoo/donate.html
@@ -22,6 +22,7 @@
                 </ul>
             </nav>
             <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a>
+            <div class="burger-menu"></div>
         </header>
         <main class="main">
             <div class="preview"></div>
@@ -35,7 +36,7 @@
                 <h3>Donation Information</h3>
                 <div class="donate-card">
                     <h2>Pick and feed a friend</h2>
-                    <span>We know the animals bring you joy, and in these extraordinaty times, we're glad.</span>
+                    <span>We know the animals bring you joy, and in these extraordinary times, we're glad.</span>
                     <div class="counter">
                         <div class="counter__number">
                             <span>4</span> 
