feat: add mobile layout for main page

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -47,6 +47,7 @@
                     </div>
                     <img src="assets/backstage-flower.png" alt="" class="backstage-flower-desktop">
                     <img src="assets/backstage-flower-tablet.jpg" alt="" class="backstage-flower-tablet">
+                    <img src="assets/backstage-flower-mobile.jpg" alt="" class="backstage-flower-mobile">
                 </section>
                 <section class="pets">
                     <div class="cards-container">
@@ -119,10 +120,12 @@
                     <div class="pets__aside">
                         <img src="assets/palm_foto.png" alt="" class="palm">
                         <img src="assets/palm_foto_small.jpg" alt="" class="palm-sm-desktop">  
-                        <img src="assets/palm_foto_tablet.jpg" alt="" class="palm-tablet">         
+                        <img src="assets/palm_foto_tablet.jpg" alt="" class="palm-tablet">  
+                        <img src="assets/palm_foto_mobile.jpg" alt="" class="palm-mobile">       
                         <img src="assets/strelitzia.png" alt="" class="strelitzia">
                         <img src="assets/strelitzia_small.jpg" alt="" class="strelitzia-sm-desktop">
                         <img src="assets/strelitzia_tablet.jpg" alt="" class="strelitzia-tablet">
+                        <img src="assets/strelitzia_mobile.jpg" alt="" class="strelitzia-mobile">
                     </div>
                 </section>
                 <section class="feed">
@@ -230,12 +233,16 @@
                     <img src="assets/leav_foto.png" alt="" class="leaf">
                     <img src="assets/leav_foto_sm_desktop.jpg" alt="" class="leaf-sm-desktop">
                     <img src="assets/leav_foto_tablet.jpg" alt="" class="leaf-tablet">
+                    <img src="assets/leav_foto_mobile.jpg" alt="" class="leaf-mobile">
                 </section>
             </main>
             <footer class="footer">
                 <div class="footer-wrapper">
                     <div class="top-container">
-                        <a href="#header"><img src="assets/header-logo.png" alt=""></a>
+                        <a href="#header">
+                            <img src="assets/header-logo.png" alt="" class="footer-logo">
+                            <img src="assets/footer-logo-mobile.png" alt="" class="footer-logo-mobile">
+                        </a>
                         <form class="subscribe">
                             <label>Subscribe to our news</label> 
                             <input class="input__subscribe input__subscribe--mistake" type="email" placeholder="Enter your email"><button class="button__subscribe button__subscribe--mistake">Submit</button>
@@ -289,7 +296,7 @@
                         </ul>
                     </div>
                     <ul>
-                        <li class="about">About</li>
+                        <li class="about"><a href="#header">About</a></li>
                         <li>Map</li>
                         <li>Zoos</li>
                         <li>Contact us</li>
