feat: add mobile layout for donate page

--- a/online-zoo/donate.html
+++ b/online-zoo/donate.html
@@ -43,7 +43,7 @@
                             <span>Panda diet for the day</span>
                         </div>
                         <img src="assets/x_icon.svg" alt=""> 
-                        <img src="assets/panda_widget1.svg" alt="">
+                        <img src="assets/panda_widget1.svg" alt="" class="pet-icon">
                     </div>
                     <div class="ruler-container">
                         <span>Amount</span>
@@ -96,7 +96,10 @@
     <footer class="footer">
         <div class="footer-wrapper">
             <div class="top-container">
-                <a href="index.html"><img src="assets/header-logo.png" alt=""></a>
+                <a href="index.html">
+                    <img src="assets/header-logo.png" alt="" class="footer-logo">
+                    <img src="assets/footer-logo-mobile.png" alt="" class="footer-logo-mobile">
+                </a>
                 <form class="subscribe">
                     <label>Subscribe to our news</label> 
                     <input class="input__subscribe input__subscribe--mistake" type="email" placeholder="Enter your email"><button class="button__subscribe button__subscribe--mistake">Submit</button>
