feat: add basic slider to pet section

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -15,13 +15,27 @@
             <nav class="navigation">
                 <ul>
                     <li class="navigation__item navigation__item--active"><a href="#header">About</a></li>
-                    <li class="navigation__item">Map</li><li class="navigation__item">Zoos</li>
+                    <li class="navigation__item">Map</li>
+                    <li class="navigation__item">Zoos</li>
                     <li class="navigation__item"><a href="donate.html">Donate</a></li>
                     <li class="navigation__item"><a href="#contact">Contact us</a></li>
                 </ul>
             </nav>
             <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a>
-            <div class="burger-menu"></div>
+            <div class="burger-menu-btn"></div>
+            <div class="burger-menu burger-menu--inactive">
+                <div class="popup__background"></div>
+                <h3>PetStory online <img src="assets/bamboo-orange.svg" alt=""></h3>
+                <ul>
+                    <li><a href="#header">About</a></li>
+                    <li>Map</li>
+                    <li>Zoos</li>
+                    <li><a href="donate.html">Donate</a></li>
+                    <li><a href="#contact">Contact us</a></li>
+                    <li><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a></li>
+                </ul>
+                <img src="assets/active_menu.svg" alt="" class="close-menu-btn">
+            </div>
         </header>
         <main class="main">
             <section class="online">
@@ -50,68 +64,71 @@
                     <img src="assets/backstage-flower-mobile.jpg" alt="" class="backstage-flower-mobile">
                 </section>
                 <section class="pets">
-                    <div class="cards-container">
-                        <div class="card-one">
-                            <img src="assets/giant-pandas.png" alt="">
-                            <div class="caption">
-                                <div class="caption__text">
-                                    <h3>GIANT PANDAS</h3>
-                                    <p>Native to Southwest China</p>
+                    <div class="slider">
+                        <div class="slide">
+                            <div class="card-one">
+                                <img src="assets/giant-pandas.png" alt="">
+                                <div class="caption">
+                                    <div class="caption__text">
+                                        <h3>GIANT PANDAS</h3>
+                                        <p>Native to Southwest China</p>
+                                    </div>
+                                    <img src="assets/banana-bamboo_icon.svg" alt="">
                                 </div>
-                                <img src="assets/banana-bamboo_icon.svg" alt="">
                             </div>
-                        </div>
-                        <div class="card-two">
-                            <img src="assets/eagles.png" alt="">
-                            <div class="caption">
-                                <div class="caption__text">
-                                    <h3>EAGLES</h3>
-                                    <p>Native to South America</p>
+                            <div class="card-two">
+                                <img src="assets/eagles.png" alt="">
+                                <div class="caption">
+                                    <div class="caption__text">
+                                        <h3>EAGLES</h3>
+                                        <p>Native to South America</p>
+                                    </div>
+                                    <img src="assets/meet-fish_icon.svg" alt="">
                                 </div>
-                                <img src="assets/meet-fish_icon.svg" alt="">
                             </div>
-                        </div>
-                        <div class="card-three">
-                            <img src="assets/gorillas.png" alt="">
-                            <div class="caption">
-                                <div class="caption__text">
-                                    <h3>GORILLAS</h3>
-                                    <p>Native to Congo</p>
+                            <div class="card-three">
+                                <img src="assets/gorillas.png" alt="">
+                                <div class="caption">
+                                    <div class="caption__text">
+                                        <h3>GORILLAS</h3>
+                                        <p>Native to Congo</p>
+                                    </div>
+                                    <img src="assets/banana-bamboo_icon.svg" alt="">
                                 </div>
-                                <img src="assets/banana-bamboo_icon.svg" alt="">
                             </div>
-                        </div>
-                        <div class="card-four">
-                            <img src="assets/two-toed-sloth.png" alt="">
-                            <div class="caption">
-                                <div class="caption__text">
-                                    <h3>TWO-TOED SLOTH</h3>
-                                    <p>Mesoamerica, South America</p>
+                            <div class="card-four">
+                                <img src="assets/two-toed-sloth.png" alt="">
+                                <div class="caption">
+                                    <div class="caption__text">
+                                        <h3>TWO-TOED SLOTH</h3>
+                                        <p>Mesoamerica, South America</p>
+                                    </div>
+                                    <img src="assets/banana-bamboo_icon.svg" alt="">
                                 </div>
-                                <img src="assets/banana-bamboo_icon.svg" alt="">
                             </div>
-                        </div>
-                        <div class="card-five">
-                            <img src="assets/cheetahs.png" alt="">
-                            <div class="caption">
-                                <div class="caption__text">
-                                    <h3>CHEETAHS</h3>
-                                    <p>Native to Africa</p>
+                            <div class="card-five">
+                                <img src="assets/cheetahs.png" alt="">
+                                <div class="caption">
+                                    <div class="caption__text">
+                                        <h3>CHEETAHS</h3>
+                                        <p>Native to Africa</p>
+                                    </div>
+                                    <img src="assets/meet-fish_icon.svg" alt="">
                                 </div>
-                                <img src="assets/meet-fish_icon.svg" alt="">
                             </div>
-                        </div>
-                        <div class="card-six">
-                            <img src="assets/penguins.png" alt="">
-                            <div class="caption">
-                                <div class="caption__text">
-                                    <h3>PENGUINS</h3>
-                                    <p>Native to Antarctica</p>
+                            <div class="card-six">
+                                <img src="assets/penguins.png" alt="">
+                                <div class="caption">
+                                    <div class="caption__text">
+                                        <h3>PENGUINS</h3>
+                                        <p>Native to Antarctica</p>
+                                    </div>
+                                    <img src="assets/meet-fish_icon.svg" alt="">
                                 </div>
-                                <img src="assets/meet-fish_icon.svg" alt="">
                             </div>
                         </div>
                     </div>
+                    
                     <div class="cards-controls">
                         <button class="control-button left"><img src="assets/arrow-left.svg" alt=""></button> 
                         <button class="control-button right"><img src="assets/arrow-right.svg" alt=""></button>
