feat: add testimonials generator

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -176,10 +176,10 @@
                 </section>
                 <section class="testimonials">
                     <h3>Testimonials</h3>
-                    <div class="testimonials-container">
+                    <!-- <div class="testimonials-container">
                         <div class="testimonials__card">
                             <div class="user">
-                                <img src="assets/user_icon.svg" alt="">
+                                <img src="assets/users/user_icon.svg" alt="">
                                 <div class="user__information">
                                     <p>Michael John</p>
                                     <span>Local Austria</span> 
@@ -195,7 +195,7 @@
                         </div>
                         <div class="testimonials__card">
                             <div class="user">
-                                <img src="assets/user_2.png" alt="">
+                                <img src="assets/users/user_2.png" alt="">
                                 <div class="user__information">
                                     <p>Oskar Samborsky</p>
                                     <span>Local Austria</span> 
@@ -211,7 +211,7 @@
                         </div>
                         <div class="testimonials__card">
                             <div class="user">
-                                <img src="assets/user_3.png" alt="">
+                                <img src="assets/users/user_3.png" alt="">
                                 <div class="user__information">
                                     <p>Fredericka Michelin</p>
                                     <span>Local Austria</span> 
@@ -227,7 +227,7 @@
                         </div>
                         <div class="testimonials__card">
                             <div class="user">
-                                <img src="assets/user_4.png" alt="">
+                                <img src="assets/users/user_4.png" alt="">
                                 <div class="user__information">
                                     <p>Mila Riksha</p>
                                     <span>Local Austria</span> 
@@ -241,7 +241,7 @@
                                 My son delighted very much ljves to watch gouillas.<br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="scroll">
                         <div class="progress"></div>
                     </div>
