feat: add testimonial slider and testimonial popup

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -176,75 +176,7 @@
                 </section>
                 <section class="testimonials">
                     <h3>Testimonials</h3>
-                    <!-- <div class="testimonials-container">
-                        <div class="testimonials__card">
-                            <div class="user">
-                                <img src="assets/users/user_icon.svg" alt="">
-                                <div class="user__information">
-                                    <p>Michael John</p>
-                                    <span>Local Austria</span> 
-                                    <span>&#183;</span> 
-                                    <span>Today</span>
-                                </div>
-                            </div>
-                            <p>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online 
-                                zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.<br>The best online zoo I’ve met. 
-                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very 
-                                much ljves to watch gouillas.<br>Online zoo is one jf the ways to instill a love for animals.
-                            </p>
-                        </div>
-                        <div class="testimonials__card">
-                            <div class="user">
-                                <img src="assets/users/user_2.png" alt="">
-                                <div class="user__information">
-                                    <p>Oskar Samborsky</p>
-                                    <span>Local Austria</span> 
-                                    <span>&#183;</span> 
-                                    <span>Yesterday</span>
-                                </div>
-                            </div>
-                            <p>Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is 
-                                one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.<br>The best online 
-                                zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. 
-                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
-                            </p>
-                        </div>
-                        <div class="testimonials__card">
-                            <div class="user">
-                                <img src="assets/users/user_3.png" alt="">
-                                <div class="user__information">
-                                    <p>Fredericka Michelin</p>
-                                    <span>Local Austria</span> 
-                                    <span>&#183;</span> 
-                                    <span>Yesterday</span>
-                                </div>
-                            </div>
-                            <p>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best 
-                                online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.<br>The best 
-                                online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online 
-                                zoo I’ve met.<br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
-                            </p>
-                        </div>
-                        <div class="testimonials__card">
-                            <div class="user">
-                                <img src="assets/users/user_4.png" alt="">
-                                <div class="user__information">
-                                    <p>Mila Riksha</p>
-                                    <span>Local Austria</span> 
-                                    <span>&#183;</span> 
-                                    <span>Yesterday</span>
-                                </div>
-                            </div>
-                            <p>My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. 
-                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. 
-                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. 
-                                My son delighted very much ljves to watch gouillas.<br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
-                            </p>
-                        </div>
-                    </div> -->
-                    <div class="scroll">
-                        <div class="progress"></div>
-                    </div>
+                    <input type="range" min="1" max="8" step="1" value="1" class="scroll">
                     <button class="button testimonials__button">LEAVE FEEDBACK</button> 
                     <img src="assets/leav_foto.png" alt="" class="leaf">
                     <img src="assets/leav_foto_sm_desktop.jpg" alt="" class="leaf-sm-desktop">
