feat: add burger nav to donate page

--- a/online-zoo/donate.html
+++ b/online-zoo/donate.html
@@ -16,13 +16,27 @@
             <nav class="navigation">
                 <ul>
                     <li class="navigation__item"><a href="index.html">About</a></li>
-                    <li class="navigation__item">Map</li><li class="navigation__item">Zoos</li>
+                    <li class="navigation__item">Map</li>
+                    <li class="navigation__item">Zoos</li>
                     <li class="navigation__item navigation__item--active"><a href="#header">Donate</a></li>
                     <li class="navigation__item"><a href="#contact">Contact us</a></li>
                 </ul>
             </nav>
             <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a>
-            <div class="burger-menu"></div>
+            <div class="burger-menu-btn"></div>
+            <div class="burger-menu burger-menu--inactive">
+                <div class="popup__background"></div>
+                <h3>PetStory online <img src="assets/bamboo-orange.svg" alt=""></h3>
+                <ul>
+                    <li><a href="#header">About</a></li>
+                    <li>Map</li>
+                    <li>Zoos</li>
+                    <li><a href="donate.html">Donate</a></li>
+                    <li><a href="#contact">Contact us</a></li>
+                    <li><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a></li>
+                </ul>
+                <img src="assets/active_menu.svg" alt="" class="close-menu-btn">
+            </div>
         </header>
         <main class="main">
             <div class="preview"></div>
