feat: add js to amount section

--- a/online-zoo/donate.html
+++ b/online-zoo/donate.html
@@ -28,7 +28,7 @@
                 <div class="popup__background"></div>
                 <h3>PetStory online <img src="assets/bamboo-orange.svg" alt=""></h3>
                 <ul>
-                    <li><a href="#header">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li>Map</li>
                     <li>Zoos</li>
                     <li><a href="donate.html">Donate</a></li>
@@ -66,10 +66,10 @@
                             <div class="dots">
                                 <div class="dot"></div>
                                 <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
                                 <div class="dot dot--active"></div>
-                                <div class="dot"></div>
-                                <div class="dot"></div>
-                                <div class="dot"></div>
                                 <div class="dot"></div>
                                 <div class="dot"></div>
                             </div>
@@ -77,17 +77,17 @@
                         <div class="money">
                             <div>$ 5000</div>
                             <div>$ 2000</div>
-                            <div class="money--active">$ 1000</div>
+                            <div>$ 1000</div>
                             <div>$ 500</div>
                             <div>$ 250</div>
-                            <div>$ 100</div>
+                            <div class="money--active">$ 100</div>
                             <div>$ 50</div>
                             <div>$ 25</div>
                         </div>
                     </div>
                     <form class="form">
                         <div class="amount">
-                            <input type="number" placeholder="Another amount"> 
+                            <input type="number" placeholder="Another amount" min="1" max="9999" value="100" class="input"> 
                             <span>$</span>
                         </div>
                         <div class="radio-buttons">
