--- a/online-zoo/donate.html
+++ b/online-zoo/donate.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html">About</a></li>
                     <li>Map</li>
                     <li>Zoos</li>
-                    <li><a href="donate.html">Donate</a></li>
+                    <li><a href="#header">Donate</a></li>
                     <li><a href="#contact">Contact us</a></li>
                     <li><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" target="_blank">Designed by &#169;</a></li>
                 </ul>
